# src/routes/auth.routes.ts
@@ -1,5 +1,11 @@
 import express from "express";
-import { getMe, login, register } from "../controllers/auth.controller.js";
+import {
+  getMe,
+  login,
+  logOut,
+  refreshToken,
+  register,
+} from "../controllers/auth.controller.js";
 import { protect } from "../middlewares/auth.middleware.js";
 
 const router = express.Router();
@@ -9,5 +15,7 @@ router.post("/login", login);
 
 // #swagger.security = [{ "bearerAuth": [] }]
 router.get("/me", protect, getMe);
+router.post("/refresh", refreshToken);
+router.post("/logout", logOut);
 
 export default router;
