# src/routes/proposal.routes.ts
@@ -2,8 +2,9 @@ import express from "express";
 import {
   createProposal,
   getJobProposals,
+  updateProposalStatus,
 } from "../controllers/proposal.controller.js";
-import { protect } from "../middlewares/auth.middleware.js";
+import { authorize, protect } from "../middlewares/auth.middleware.js";
 
 const router = express.Router({ mergeParams: true });
 
@@ -11,4 +12,20 @@ router.post("/", protect, createProposal);
 
 router.get("/", protect, getJobProposals);
 
+router.patch(
+  "/:proposalId",
+  // #swagger.parameters['body'] = {
+  //   in: 'body',
+  //   required: true,
+  //   schema: {
+  //     type: 'object',
+  //     properties: {
+  //       status: { type: 'string', example: 'accepted', enum: ['accepted', 'rejected', 'withdrawn'] }
+  //     }
+  //   }
+  // }
+  protect,
+  authorize("client"),
+  updateProposalStatus,
+);
 export default router;
